# discord-python-starter

./: .dockerignore  .env.template  .gitignore  Dockerfile  GITHUB_TOOL_PROGRESS.md  LICENSE  README.md  bot.py  fly.toml  pyproject.toml
src/: bot.py  honcho_utils.py
tools/: __init__.py
tools/github/: __init__.py  config.py  exceptions.py  github_tool.py
