[project]
name = "discord-python-starter"
version = "0.1.0"
description = "Discord Python Starter Template"
authors = ["Vineeth Voruganti <13438633+VVoruganti@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "py-cord>=2.5.0",
    "python-dotenv>=1.0.1",
    "honcho-ai>=0.0.19",
    "openai>=1.42.0",
]
